[gd_scene load_steps=11 format=3 uid="uid://bxev7fmtboaec"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_se1xj"]
[ext_resource type="Texture2D" uid="uid://buanw2hgyjt2r" path="res://enemies/eye.png" id="2_fouud"]
[ext_resource type="PackedScene" uid="uid://daycr8egi2o5v" path="res://utility/hurt_area.tscn" id="3_xlqtm"]
[ext_resource type="PackedScene" uid="uid://bgtawdfewnr10" path="res://utility/hit_area.tscn" id="4_6a8a8"]
[ext_resource type="PackedScene" uid="uid://brvnsa73iadyg" path="res://utility/animation_player_vfx.tscn" id="5_xmra7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d2iqj"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_t2uu8"]
radius = 5.0

[sub_resource type="Animation" id="Animation_3jhv7"]
resource_name = "Appear"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.3, 1.8), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sc8lw"]
resource_name = "Move"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_can_move"
}, {
"args": [false],
"method": &"set_can_move"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hnpsk"]
_data = {
"Appear": SubResource("Animation_3jhv7"),
"Move": SubResource("Animation_sc8lw")
}

[node name="Eye" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 17
script = ExtResource("1_se1xj")
score = 120
speed = -30

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(1.05185, 0.940741)
texture = ExtResource("2_fouud")
offset = Vector2(0, -8)
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_d2iqj")

[node name="HurtArea" parent="." instance=ExtResource("3_xlqtm")]
visible = false
collision_layer = 32

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("CircleShape2D_d2iqj")

[node name="HitArea" parent="." instance=ExtResource("4_6a8a8")]
visible = false

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("CircleShape2D_t2uu8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hnpsk")
}
autoplay = "Appear"

[node name="AnimationPlayerVFX" parent="." instance=ExtResource("5_xmra7")]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.314
autostart = true

[node name="TimerScore" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="TimerScore" to="." method="_on_timer_score_timeout"]
